	  like :-(( (Thanks Eric Melski)
	* When an IM image is clicked, don't open the browser (Thanks
	  Ari Pollak)
	* Prevent a possible crash in unhide_buddy_list() (Thanks Ari
	  Pollak)
	* Fixed a compilation problem on systems without iconv.
	* GtkIMHtml can be set to render font sizes as point size
	  or AIMish relative sizes -- no more huge Yahoo fonts. (Thanks
	  Ka-Hing Cheung)

version 0.59.1 (08/25/2002)
	* Created a gtk1-stable branch for GTK+ 1.2 bugfix releases.
	  Development will continue in our main branch in GTK+ 2 only.
	* Fixed a security bug in the manual browser setting (Thanks
	  Robert McQueen)
	* Now using libiconv for better i18n support (Thanks Junichi
	  Uekawa)
	* Will work with Perl 5.8 (thanks, Timothy Lee and Dan 
	  Colascione)
	* Fix for HTTP proxies (thanks, Ethan Blanton)	
	* Read proxy environment variables. (thanks, Christian Hammond)
	* Use the pretty gaim.png for our menu entry.
	* Added support for gettext 0.11.x.

version 0.59 (06/24/2002):
	* Hungarian translation added (Thanks, Sutto Zoltan)
	* Swedish translation updated (Thanks, Christian Rose)
	* Spanish translation updated (Thanks, Alex)
	* Traditional Chinese translation updated (Thanks, Paladin Liu)
	* Czech translation added (Thanks, Honza)
	* Polish translation updated (Thanks Przemyslaw Sulek)
	* Squashed a bug in buddy right-click menu handling
	  that crashed Gaim.  In the process: found and
	  eliminated some memory leaks.
	* Fixed a significant applet leak
	* Can now change Jabber password on server (Thanks,
	  Nathan Walp)
	* Certain types of Jabber presence errors no longer
	  falsely show a buddy on-line.  Instead now a "broken
	  light-bulb" icon is shown and the error status is
	  available via "Get Away Msg"  (Thanks and a tip o'
	  the hat to Christian Hammond for the graphic)
	* Conversation struct has pointer to toolbar (thanks Brent
	  Priddy and Paul Miller)
	* Zephyr fixes (thanks, Arun A. Tharuvai)
	* Aliases in buddy ticker