@@ -19,6 +19,8 @@ version 0.59.2
 	* GtkIMHtml can be set to render font sizes as point size
 	  or AIMish relative sizes -- no more huge Yahoo fonts. (Thanks
 	  Ka-Hing Cheung)
+	* Fixed a bug with regard to Jabber resources (Thanks Nathan
+	  Walp)
 
 version 0.59.1 (08/25/2002)
 	* Created a gtk1-stable branch for GTK+ 1.2 bugfix releases.
